--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ pillow==9.5.0
 psutil
 py-tgcalls==0.8.6
 pykeyboard
-git+https://github.com/pyrogram.git
+pyrogram
 python-dotenv
 pyyaml==5.3.1
 requests
